V1 version of the project,this is code is not the final result its just a quick demo

--- a/Pages/Cities/Cities.html
+++ b/Pages/Cities/Cities.html
@@ -3,10 +3,241 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Cities.css">
+    <title>City Bikes - Veloretti</title>
+    <link rel="stylesheet" href="../../shared.css">
+    <link rel="stylesheet" href="./Cities.css">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header class="header">
+        <nav class="nav">
+            <div class="nav-container">
+                <a href="../../Index.html" class="logo">
+                    <svg width="110" height="12" viewBox="0 0 110 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <text x="0" y="10" font-family="Nuckle, Inter" font-weight="600" font-size="12" fill="#141615">VELORETTI</text>
+                    </svg>
+                </a>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <button class="nav-button">Electric</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-button">City</button>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-button">Kids</button>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Accessories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Stores</a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="nav-button">Leasing</button>
+                    </li>
+                </ul>
+                <div class="nav-controls">
+                    <button class="control-btn language-btn">
+                        <span class="label">en</span>
+                        <svg width="10" height="6" viewBox="0 0 10 6" fill="none">
+                            <path d="M1 1L5 5L9 1" stroke="currentColor" stroke-width="2"/>
+                        </svg>
+                    </button>
+                    <button class="control-btn account-btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12Z" stroke="currentColor" stroke-width="2"/>
+                            <path d="M20.59 22C20.59 18.13 16.74 15 12 15C7.26 15 3.41 18.13 3.41 22" stroke="currentColor" stroke-width="2"/>
+                        </svg>
+                    </button>
+                    <button class="control-btn cart-btn">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M9 22C9.55228 22 10 21.5523 10 21C10 20.4477 9.55228 20 9 20C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22Z" stroke="currentColor" stroke-width="2"/>
+                            <path d="M20 22C20.5523 22 21 21.5523 21 21C21 20.4477 20.5523 20 20 20C19.4477 20 19 20.4477 19 21C19 21.5523 19.4477 22 20 22Z" stroke="currentColor" stroke-width="2"/>
+                            <path d="M1 1H5L7.68 14.39C7.77144 14.8504 8.02191 15.264 8.38755 15.5583C8.75318 15.8526 9.2107 16.009 9.68 16H19C19.4693 16.009 19.9268 15.8526 20.2925 15.5583C20.6581 15.264 20.9086 14.8504 21 14.39L22.6 7H6" stroke="currentColor" stroke-width="2"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main">
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-container"></div>
+        </section>
+
+        <!-- Title Section -->
+        <section class="title-section">
+            <div class="title-container">
+                <h1 class="title-text">Forever Forward.</h1>
+            </div>
+        </section>
+
+        <!-- Text-Media Section (Women's Bikes) -->
+        <section class="text-media-section">
+            <div class="text-media-wrapper">
+                <div class="text-media-left">
+                    <div class="image-wrapper">
+                        <img src="/Images/woman riding .png" alt="Women's bike" class="section-image">
+                    </div>
+                </div>
+                <div class="text-media-right">
+                    <div class="image-wrapper image-wrapper-absolute">
+                        <img src="/Images/woman riding 2.png" alt="Women's bike" class="section-image">
+                    </div>
+                </div>
+                <div class="text-media-content">
+                    <div class="text-content-box">
+                        <p class="paragraph">Our women's bicycles are for everyone who likes to combine style with performance. In this range, available are the Café Racer and the Robyn, both frames with a lower tube, making it easy to step through.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Collection Slider Section -->
+        <section class="collection-slider-section">
+            <div class="collection-slider-wrapper">
+                <div class="collection-slider">
+                    <div class="collection-item">
+                        <div class="collection-image-wrapper">
+                            <img src="../../Images/cafe-racer-women.png" alt="Caféracer Women" class="collection-image">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Caféracer</h3>
+                            <p class="collection-subtitle">Women</p>
+                        </div>
+                    </div>
+                    <div class="collection-item">
+                        <div class="collection-image-wrapper">
+                            <img src="../../Images/robyn-women.png" alt="Robyn Women" class="collection-image">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Robyn</h3>
+                            <p class="collection-subtitle">Women</p>
+                        </div>
+                    </div>
+                    <div class="collection-item">
+                        <div class="collection-image-wrapper">
+                            <img src="../../Images/cafe-racer-women-2.png" alt="Caféracer" class="collection-image">
+                        </div>
+                        <div class="collection-info">
+                            <h3 class="collection-title">Caféracer</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Text-Media Static Section (Men's Bikes) -->
+        <section class="text-media-static-section">
+            <div class="text-media-static-wrapper">
+                <div class="text-media-static-left">
+                    <div class="image-wrapper">
+                        <img src="../../Images/mens-bike-1.png" alt="Men's bike" class="section-image">
+                    </div>
+                </div>
+                <div class="text-media-static-content">
+                    <p class="paragraph-static">Whether you like it easy or fast, we got both. Our men's range of bicycles combine modern clean design with great quality, so they're perfect for your daily city commute. Our men citybikes are the Caféracer, Caféchaser and the Berlin, but feel free to opt for a women's bike for that easy hop-on- hop-off Amsterdam style.</p>
+                </div>
+                <div class="text-media-static-right">
+                    <div class="image-wrapper">
+                        <img src="../../Images/mens-bike-2.png" alt="Men's bike" class="section-image">
+                    </div>
+                </div>
+                <div class="text-media-static-bottom">
+                    <img src="../../Images/mens-bike-3.png" alt="Men's bike" class="section-image-bottom">
+                </div>
+            </div>
+        </section>
+
+        <!-- Final Title Section -->
+        <section class="final-title-section">
+            <div class="final-title-container">
+                <h1 class="final-title-text">City bikes for<br>everyone.</h1>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-background">
+            <div class="footer-content">
+                <div class="footer-text">
+                    <p>Ready to take the Electric Ivy or Ace for a spin? Electric test rides are now available in Amsterdam, Amstelveen, Abcoude, Bussum, Den Haag, Nijmegen, Weesp, Wormerveer, Berlin, Hamburg and Munich. Schedule your test ride now and we'll see you there.</p>
+                </div>
+                <div class="button-wrap">
+                    <button class="book-now-btn">BOOK NOW</button>
+                </div>
+            </div>
+            <div class="footer-container">
+                <div class="footer-menus">
+                    <div class="footer-menu-item">
+                        <div class="explorer-widget">
+                            <h3 class="widget-title">Explorer</h3>
+                            <ul class="footer-list">
+                                <li><a href="#">Electric bikes</a></li>
+                                <li><a href="#">City bikes</a></li>
+                                <li><a href="#">Kids' bikes</a></li>
+                                <li><a href="#">Accessories</a></li>
+                                <li><a href="#">Outlet</a></li>
+                                <li><a href="#">Business</a></li>
+                                <li><a href="#">Insurance Electric</a></li>
+                                <li><a href="#">Size guide</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-menu-item">
+                        <div class="about-widget">
+                            <h3 class="widget-title">About</h3>
+                            <ul class="footer-list">
+                                <li><a href="#">About us</a></li>
+                                <li><a href="#">Journal</a></li>
+                                <li><a href="#">Reviews</a></li>
+                                <li><a href="#">Press</a></li>
+                                <li><a href="#">Jobs</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-menu-item">
+                        <div class="help-widget">
+                            <h3 class="widget-title">Help</h3>
+                            <ul class="footer-list">
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Delivery</a></li>
+                                <li><a href="#">Assembly & manuals</a></li>
+                                <li><a href="#">Payment options</a></li>
+                                <li><a href="#">Privacy policy</a></li>
+                                <li><a href="#">Terms & conditions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-email-subscription">
+                    <div class="join-the-ride-widget">
+                        <div class="subscription-text-container">
+                            <h3 class="subscription-title">Join the ride.</h3>
+                            <p class="subscription-description">Sign up for our newsletter.</p>
+                        </div>
+                        <form class="subscription-form">
+                            <div class="subscription-form-container">
+                                <input type="email" placeholder="Enter your email address here" class="subscription-input">
+                                <button type="submit" class="subscription-button">Subscribe</button>
+                            </div>
+                            <div class="subscription-privacy">
+                                <div class="footer-checkbox">
+                                    <input type="checkbox" id="privacy-check">
+                                    <label for="privacy-check">By signing up, I agree to the privacy policy of Veloretti.</label>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
