v2 of the project

--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="AboutUs.css">
-</head>
-<body>
-    <h1> hello from souad </h1>
-    
+    <script defer src="../../components/custom-page-header.js"></script>
+    <script defer src="../../components/custom-footer.js"></script>
+  </head>
+  <body>
+    <custom-page-header></custom-page-header>
+
+    <custom-footer></custom-footer>
+  </body>
+</html>
 </body>
 </html>
