--- a/Pages/Product-Example/Product-Example.html
+++ b/Pages/Product-Example/Product-Example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products Page</title>
-    <link rel="stylesheet" href="Products.css" />
+    <link rel="stylesheet" href="Product-Example.css" />
     <link rel="stylesheet" href="../../shared.css">
     <script defer src="../../components/custom-page-header.js"></script>
     <script defer src="../../components/custom-footer.js"></script>
