--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -3,15 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us - Veloretti</title>
+    <link rel="stylesheet" href="./AboutUs.css">
+    <link rel="stylesheet" href="../../shared.css">
     <script defer src="../../components/custom-page-header.js"></script>
     <script defer src="../../components/custom-footer.js"></script>
-  </head>
-  <body>
+</head>
+<body>
     <custom-page-header></custom-page-header>
 
+    <main>
+        <section class="hero-section">
+            <img src="../../Images/black Veloretti Electric Ivy Two Pro.png" alt="Person riding a bike in the city" class="hero-image">
+        </section>
+
+        <section class="forever-forward-section">
+            <div class="content-wrapper">
+                <img src="../../images/rider-leaning-bike.jpg" alt="Person leaning on a bike" class="section-image">
+                <div class="text-content">
+                    <h2>Forever forward</h2>
+                    <p>Our bikes are made to stand the test of time, both aesthetically and practically. Whether you're after a state-of-the-art electric bike, a classic city bike, or a kids bike for the school run, we want to help make your commute the best part of your day.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="pon-bike-section">
+            <div class="content-wrapper">
+                <div class="text-content">
+                    <h2>Part of Pon.Bike</h2>
+                    <p>Veloretti was founded in Amsterdam in 2012 with a mission to make clean, timeless bikes that are great quality and delivered to your door at a fair price. We are proud to now be part of Pon.Bike, the world-leading family of bike brands. With this support, we can continue to evolve our designs, take care of our riders, and help keep their bikes on the road.</p>
+                </div>
+                <img src="../../images/bike-handle.jpg" alt="Close up of a bike handle" class="section-image">
+            </div>
+        </section>
+
+        <section class="designed-in-amsterdam-section">
+            <div class="content-wrapper">
+                <h2>Designed in Amsterdam, handmade in Europe, personal in all cities.</h2>
+            </div>
+        </section>
+
+        <section class="bike-showcase-section">
+            <div class="content-wrapper">
+                <h3>Explore our bikes</h3>
+                <div class="bike-categories">
+                    <div class="bike-card">
+                        <h4>Electric Bikes</h4>
+                        <p>From €3,299</p>
+                        <p>Electric Ivy Two</p>
+                        <img src="../../images/electric-bike.jpg" alt="Electric bike">
+                        <div class="card-actions">
+                            <button>Buy Now</button>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <div class="bike-card">
+                        <h4>City Bikes</h4>
+                        <p>From €399</p>
+                        <p>Women</p>
+                        <img src="../../images/city-bike.jpg" alt="City bike">
+                        <div class="card-actions">
+                            <button>Buy Now</button>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                    <div class="bike-card">
+                        <h4>Kids' Bikes</h4>
+                        <p>Ages 15 to 8</p>
+                        <img src="../../images/kids-bike.jpg" alt="Kids bike">
+                        <div class="card-actions">
+                            <button>Buy Now</button>
+                            <button>Learn more</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <custom-footer></custom-footer>
-  </body>
-</html>
 </body>
 </html>
