--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -14,12 +14,12 @@
 
     <main>
         <section class="hero-section">
-            <img src="../../Images/black Veloretti Electric Ivy Two Pro.png" alt="Person riding a bike in the city" class="hero-image">
+            <img src="../../Images/black Veloretti Electric Ivy Two Pro .png" alt="Person riding a bike in the city" class="hero-image">
         </section>
 
         <section class="forever-forward-section">
             <div class="content-wrapper">
-                <img src="../../images/rider-leaning-bike.jpg" alt="Person leaning on a bike" class="section-image">
+                <img src="../../Images/black Veloretti Electric Ivy Two Pro .png" alt="Person leaning on a bike" class="section-image">
                 <div class="text-content">
                     <h2>Forever forward</h2>
                     <p>Our bikes are made to stand the test of time, both aesthetically and practically. Whether you're after a state-of-the-art electric bike, a classic city bike, or a kids bike for the school run, we want to help make your commute the best part of your day.</p>
