--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -67,7 +67,7 @@
                     <h2>Part of Pon.Bike</h2>
                     <p>Veloretti was founded in Amsterdam in 2012 with a mission to make clean, timeless bikes that are great quality and delivered to your door at a fair price. We are proud to now be part of Pon.Bike, the world-leading family of bike brands. With this support, we can continue to evolve our designs, take care of our riders, and help keep their bikes on the road.</p>
                 </div>
-                <img src="../../images/bike-handle.jpg" alt="Close up of a bike handle" class="section-image animated-img" loading="lazy">
+                <img src="../../images/tanding with classic-style city bicycles.png" alt="Close up of a bike handle" class="section-image animated-img" loading="lazy">
             </div>
         </section>
 
@@ -85,7 +85,7 @@
                         <h4>Electric Bikes</h4>
                         <p>From €3,299</p>
                         <p>Electric Ivy Two</p>
-                        <img src="../../images/electric-bike.jpg" alt="Electric bike" loading="lazy" class="animated-img">
+                        <img src="../../images/Veloretti Electric Ace Two Pro .png" alt="Electric bike" loading="lazy" class="animated-img">
                         <div class="card-actions">
                             <button>Buy Now</button>
                             <button>Learn more</button>
@@ -95,7 +95,7 @@
                         <h4>City Bikes</h4>
                         <p>From €399</p>
                         <p>Women</p>
-                        <img src="../../images/city-bike.jpg" alt="City bike" loading="lazy" class="animated-img">
+                        <img src="../../images/Veloretti Electric Ivy Two Pro.png" alt="City bike" loading="lazy" class="animated-img">
                         <div class="card-actions">
                             <button>Buy Now</button>
                             <button>Learn more</button>
@@ -104,7 +104,7 @@
                     <div class="bike-card">
                         <h4>Kids' Bikes</h4>
                         <p>Ages 15 to 8</p>
-                        <img src="../../images/kids-bike.jpg" alt="Kids bike" loading="lazy" class="animated-img">
+                        <img src="../../images/Black-small-veloriti.webp" alt= Kids bike" loading="lazy" class="animated-img">
                         <div class="card-actions">
                             <button>Buy Now</button>
                             <button>Learn more</button>
