Update meta tags

--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/Cart/Cart.html">
     <meta property="og:title" content="Shopping Cart - Veloretti">
     <meta property="og:description" content="Your Veloretti shopping cart. Review your selected electric bikes and accessories.">
-    <meta property="og:image" content="./Images/Veloretti Electric Ace Two Pro .png">
+        <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:site_name" content="Veloretti">
     
     
