--- a/Pages/Product-Example/Product-Example.html
+++ b/Pages/Product-Example/Product-Example.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/Product-Example/Product-Example.html">
     <meta property="og:title" content="Ivy Two Electric Bike | Veloretti">
     <meta property="og:description" content="Veloretti Ivy Two Electric Bike - Step-through frame, powerful mid-motor, automatic gears. Silent and powerful 65Nm torque. Carbon belt drive. â‚¬2,499.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/Veloretti Electric Ivy Two Pro.png">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
