--- a/Pages/Profile/Profile.html
+++ b/Pages/Profile/Profile.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/Profile/Profile.html">
     <meta property="og:title" content="Sign in | Veloretti">
     <meta property="og:description" content="Sign in to your Veloretti account. Enter your email to receive a verification code.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/Veloretti_logo_black-01_200x60@2x.avif">
+       <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:site_name" content="Veloretti">
     
     
