--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/">
     <meta property="og:title" content="Veloretti - Electric Bike Shop | Bike Plans for Employees">
     <meta property="og:description" content="Veloretti Electric Bikes - Bike plans for employees. Cost-free for employers, outside of WKR. Discover our award-winning electric bikes with leasing options.">
-    <meta property="og:image" content="./Images/Veloretti Electric Ace Two Pro .png">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
