--- a/Pages/AboutUs/AboutUs.html
+++ b/Pages/AboutUs/AboutUs.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/AboutUs/AboutUs.html">
     <meta property="og:title" content="About Us - Veloretti | Forever Forward">
     <meta property="og:description" content="Learn about Veloretti - Founded in Amsterdam in 2012. Part of Pon.Bike. Designed in Amsterdam, handmade in Europe. Clean, timeless bikes for your daily commute.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/black Veloretti Electric Ivy Two Pro .png">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
