--- a/Pages/Cities/Cities.html
+++ b/Pages/Cities/Cities.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://www.veloretti-project.netlify.app/Pages/Cities/Cities.html">
     <meta property="og:title" content="City Bikes - Veloretti | Forever Forward">
     <meta property="og:description" content="Discover Veloretti City Bikes - Classic design meets modern quality. Women's and men's city bikes including CafÃ©racer, Robyn, and Berlin models. From â‚¬399.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/Veloretti CafÃ©racer Classic bicycle.png">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
@@ -30,7 +30,7 @@
     <meta name="twitter:url" content="https://veloretti-project.netlify.app/Pages/Cities/Cities.html">
     <meta name="twitter:title" content="City Bikes - Veloretti | Forever Forward">
     <meta name="twitter:description" content="Discover Veloretti City Bikes - Classic design meets modern quality. Women's and men's city bikes including CafÃ©racer, Robyn, and Berlin models. From â‚¬399.">
-    <meta name="twitter:image" content="https://veloretti-project.netlify.app/Images/Veloretti CafÃ©racer Classic bicycle.png">
+    <meta name="twitter:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta name="twitter:image:alt" content="Veloretti City Bikes Collection">
     
     
