--- a/Pages/Kids/kids.html
+++ b/Pages/Kids/kids.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/Kids/kids.html">
     <meta property="og:title" content="Kids Bikes | Veloretti">
     <meta property="og:description" content="Explore Veloretti's collection of kids bikes. From tricycles to junior bikes, designed to grow with your child. Modern design, made playful. From â‚¬89.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/Tricycle-Bananarama-Yellow.webp">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
