--- a/Pages/Products/Products.html
+++ b/Pages/Products/Products.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://veloretti-project.netlify.app/Pages/Products/Products.html">
     <meta property="og:title" content="Veloretti Electric Bikes | Explore Our Collection">
     <meta property="og:description" content="Explore Veloretti's collection of electric bikes, city bikes, and kids bikes. Award-winning design, quality craftsmanship. From â‚¬399. Shop now.">
-    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/Veloretti Electric Ace Two Pro .png">
+    <meta property="og:image" content="https://veloretti-project.netlify.app/Images/favicon.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Veloretti">
