fix price problem

--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="cart-item-details">
                         <h3 class="cart-item-name">Electric Ace Two Lite Matte Black</h3>
-                        <p class="cart-item-price">â‚¬ 2.599,00</p>
+                        <p class="cart-item-price">2.599,00</p>
                     </div>
                     <button class="cart-item-remove" aria-label="Remove item">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -83,7 +83,7 @@
                 
                 <div class="summary-row total-row">
                     <span class="summary-label">Total</span>
-                    <span class="summary-value total-price">â‚¬ 2.599,00</span>
+                    <span class="summary-value total-price"> 2.599,00</span>
                 </div>
 
                 <button class="checkout-button">
