--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -118,7 +118,7 @@
                         <img src="../../Images/AXAcombi2_400x.webp" alt="AXA Defender Lock + AXA Linq" loading="lazy" class="animated-img">
                     </div>
                     <h3 class="accessory-name">AXA Defender Lock + AXA Linq</h3>
-                    <p class="accessory-price">â‚¬108,99</p>
+                    <p class="accessory-price">108,99</p>
                     <button class="add-button">Add</button>
                 </article>
 
@@ -128,7 +128,7 @@
                         <img src="../../Images/Front_carrier_matte_black_desktop2_400x.webp" alt="Electric Two Front Carrier Black" loading="lazy" class="animated-img">
                     </div>
                     <h3 class="accessory-name">Electric Two Front Carrier Black</h3>
-                    <p class="accessory-price">â‚¬59,95</p>
+                    <p class="accessory-price">59,95</p>
                     <button class="add-button">Add</button>
                 </article>
 
@@ -138,7 +138,7 @@
                         <img src="../../Images/Basket_Epic_Multi_desktop_12_e7c23c2b-bf28-43f8-832d-9be689b2c59d_400x.webp" alt="Electric Two Epic Basket Black" loading="lazy" class="animated-img">
                     </div>
                     <h3 class="accessory-name">Electric Two Epic Basket Black</h3>
-                    <p class="accessory-price">â‚¬52,95</p>
+                    <p class="accessory-price">52,95</p>
                     <button class="add-button">Add</button>
                 </article>
 
@@ -156,7 +156,7 @@
                             <option value="XL">XL</option>
                         </select>
                     </div>
-                    <p class="accessory-price">â‚¬59,95</p>
+                    <p class="accessory-price">59,95</p>
                     <button class="add-button">Add</button>
                 </article>
             </div>
