fix some layout issues

--- a/Pages/Electric/Electric.html
+++ b/Pages/Electric/Electric.html
@@ -68,8 +68,8 @@
                         <div class="product-footer">
                             <button class="btn-buy-small">Buy</button>
                             <div class="price-container">
-                                <div class="price-row"><span class="price-old">â‚¬ 2.099,00</span><span class="price-new">â‚¬ 1.899,00</span></div>
-                                <span class="discount-text">â‚¬200 off</span>
+                                <div class="price-row"><span class="price-old">&euro;2.099,00</span><span class="price-new">&euro;1.899,00</span></div>
+                                <span class="discount-text">&euro;200 off</span>
                             </div>
                         </div>
                     </div>
@@ -83,8 +83,8 @@
                         <div class="product-footer">
                             <button class="btn-buy-small">Buy</button>
                             <div class="price-container">
-                                <div class="price-row"><span class="price-old">â‚¬ 2.099,00</span><span class="price-new">â‚¬ 1.899,00</span></div>
-                                <span class="discount-text">â‚¬200 off</span>
+                                <div class="price-row"><span class="price-old">&euro;2.099,00</span><span class="price-new">&euro;1.899,00</span></div>
+                                <span class="discount-text">&euro;200 off</span>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
         <section class="feature-split">
             <div class="feature-text">
                 <h2 class="feature-title">Meet Ace</h2>
-                <p class="feature-desc">A stepâ€‘over frame electric bike for confident, supported, and fastâ€‘paced city riding. The Ace Two pairs clean design with fully integrated features, crafted for riders who value performance, precision, and presence on the road.</p>
+                <p class="feature-desc">A step over frame electric bike for confident, supported, and fast paced city riding. The Ace Two pairs clean design with fully integrated features, crafted for riders who value performance, precision, and presence on the road.</p>
                 <a href="#" class="link-arrow">Explore Ace</a>
             </div>
             <div class="feature-image">
@@ -114,7 +114,7 @@
         <section class="feature-split reverse">
             <div class="feature-text">
                 <h2 class="feature-title">Meet Ivy</h2>
-                <p class="feature-desc">With its low stepâ€‘through frame and refined design, the Ivy Two is built for ease and confidence on every city ride. Its comfortable geometry makes getting on and off effortless, while fully integrated features deliver a consistent and reliable experience.</p>
+                <p class="feature-desc">With its low step through frame and refined design, the Ivy Two is built for ease and confidence on every city ride. Its comfortable geometry makes getting on and off effortless, while fully integrated features deliver a consistent and reliable experience.</p>
                 <a href="#" class="link-arrow">Explore Ivy</a>
             </div>
             <div class="feature-image">
