--- a/Pages/Product-Example/Product-Example.html
+++ b/Pages/Product-Example/Product-Example.html
@@ -59,7 +59,7 @@
                           <h1 class="product-name">Ivy Two</h1>
                           <span class="product-tag">Electric</span>
                       </div>
-                      <p class="price">â‚¬2.499</p>
+                      <p class="price"> &euro;2.499</p>
                   </header>
                   
                   <div class="color-selection">
