add some of alerts

--- a/Pages/Profile/Profile.html
+++ b/Pages/Profile/Profile.html
@@ -70,7 +70,7 @@
 
             <form class="login-form" action="#" method="POST">
                 <input type="email" id="email" name="email" class="input-field" placeholder="Email" required>
-                <button type="submit" class="btn--continue">Continue</button>
+                <button onclick="alert('this feature is not implemented yet')" type="button" class="btn--continue">Continue</button>
             </form>
             
         </section>
