fix some issues

--- a/Index.html
+++ b/Index.html
@@ -222,9 +222,9 @@
         </section>
 
         
-        <section class="contact-section section">
+        <section id="GetInTouch" class="contact-section section">
             <div class="container">
-                <h2 class="section-heading">Get in touch</h2>
+                <h2 i class="section-heading">Get in touch</h2>
                 <form class="contact-form">
                     <input type="text" placeholder="First name" class="form-input">
                     <input type="text" placeholder="Last name" class="form-input">
