--- a/Pages/Products/Products.html
+++ b/Pages/Products/Products.html
@@ -151,7 +151,7 @@
                         <span>From  &euro;399</span>
                     </div>
                     <img src="../../Images/two individuals with Veloretti bicycles.png" alt="Two people with Veloretti city bicycles" class="cat-img animated-img" loading="lazy">
-                    <button class="btn-pill-small">Buy Now</button>
+                    <button onclick="alert('this page is not implemented yet')" class="btn-pill-small">Buy Now</button>
                 </article>
 
                 <article class="cat-card">
@@ -160,7 +160,7 @@
                         <span>From &euro;199</span>
                     </div>
                     <img src="../../Images/kids-bikes.png" alt="Veloretti kids bicycles collection" class="cat-img animated-img" loading="lazy">
-                    <button class="btn-pill-small">Buy Now</button>
+                    <button onclick="alert('this page is not implemented yet')"  class="btn-pill-small">Buy Now</button>
                 </article>
 
                 <article class="cat-card">
@@ -169,7 +169,7 @@
                         <span>Explore</span>
                     </div>
                     <img src="../../Images/Accessories.webp" alt="Veloretti bicycle accessories including locks, baskets, and bike gear" class="cat-img animated-img" loading="lazy">
-                    <button class="btn-pill-small">Shop Now</button>
+                    <button onclick="alert('this page is not implemented yet')"  class="btn-pill-small">Shop Now</button>
                 </article>
             </div>
         </section>
